<resources>
    <string name="app_name">Wine WMS</string>
    <string name="company_name">Wine Warehouse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wishlist">WishList</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_control">Control</string>
    <string name="title_cart">Cart</string>

    <string name="image_logo">Image Logo</string>
    <string name="image_background">Image Background</string>
    <string name="image_arrow">Image Arrow</string>

    <string name="labelName">Name</string>
    <string name="labelAccountDetails">Account Details</string>
    <string name="labelFirstName">First Name:</string>
    <string name="txtFirstName" />
    <string name="labelLastName">Last Name:</string>
    <string name="txtLastName" />
    <string name="labelEmail">E-mail:</string>
    <string name="txtEmail" />
    <string name="labelPassword">Password:</string>
    <string name="txtPassword" />
    <string name="labelConfirmPassword">Confirm Password:</string>
    <string name="txConfirmPassword" />
    <string name="labelPhone">Telephone:</string>
    <string name="txtPhone" />
    <string name="labelAddress">Address:</string>

    <string name="labelAddressLineOne">Address:</string>
    <string name="txtAddressLineOne" />
    <string name="labelCity">City:</string>
    <string name="txtCity" />
    <string name="labelState">State:</string>
    <string name="txtState" />
    <string name="labelPostalCode">Postal Code:</string>
    <string name="txtPostalCode" />
    <string name="labelCountry">Country:</string>
    <string name="txtCountry" />

    <string name="labelOrders">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSignup">Sign Up</string>
    <string name="btnSignin">Sign In</string>
    <string name="labelDontHaveAcc">Don\'t have account?</string>
    <string name="btnGoToSignup">Sign Up</string>
    <string name="txtRecoverPassword">Recover Password</string>
    <string name="labelLogout">Logout</string>
    <string name="labelLogin">Login</string>
    <string name="txtPrice">$ .00</string>
    <string name="txtWineName">Wine Name</string>
    <string name="txtWineProcuder">Producer</string>
    <string name="txtWineCountry">Country/Region</string>
    <string name="txtWineSearch" />
    <string name="txtWineSearchHint">Search any wine</string>
    <string name="labelFeattuedWines">Featured wines</string>
    <string name="txtDiscount">Save %</string>
    <string name="txtOginalPrice">$ .00</string>
    <string name="btnAddToCart">Add to Cart</string>
    <string name="txtSummary">Summary</string>
    <string name="txtWineDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="labelGrapes">Grapes</string>
    <string name="txtGrapes">grape</string>
    <string name="labelTasteCharacteristics">Taste Characteristics</string>
    <string name="labelLight">Light</string>
    <string name="labelBold">Bold</string>
    <string name="labelSmooth">Smooth</string>
    <string name="labelTannic">Tannic</string>
    <string name="labelDry">Dry</string>
    <string name="labelSweet">Sweet</string>
    <string name="labelSoft">Soft</string>
    <string name="labelAcidic">Acidic</string>
    <string name="labelFoodPair">Pairs well with</string>
    <string name="txtFoodPair">Beef, Lamb</string>
    <string name="labelWineReviews">Reviews</string>
    <string name="txtType">Red</string>
    <string name="labelHarvest">Harvest</string>
    <string name="txtHarvest">year</string>
    <string name="txtNoResults">No wines found.</string>
    <string name="btnRemoveItem">Remove</string>
    <string name="labelShopByType">Shop wines by category</string>
    <string name="btnRedWine">Red</string>
    <string name="btnRoseWine">Rose</string>
    <string name="btnWhiteWine">White</string>
    <string name="btnSparklingWine">Sparkling</string>
    <string name="btnResetCart">Empty Cart</string>
    <string name="btnCheckout">Checkout</string>
    <string name="btn_apply_filters">Apply Filters</string>
    <string name="labelShoppingCart">Your Shopping Cart</string>
    <string name="labelShippingAddress">Shipping Address</string>
    <string name="chkUseUserAddress">Your Address</string>
    <string name="txtTotalPrice">Total $ .00</string>
    <string name="txtQuantity">"Quantity: "</string>
    <string name="txtDiscountedTotal">"Save Total: "</string>
    <string name="btn_clear_filters">Clear</string>
    <string name="labelSignup">Thank you for signing up! We\'re thrilled to have you on board. Let\'s get started on this amazing journey together!</string>
    <string name="txtSignoffAccount">Signoff Account</string>
    <string name="txtSignoffEmail" />
    <string name="txtSignoffPassword" />
    <string name="btnSignoffAccount">Signoff</string>
    <string name="labelType">Account Type</string>

</resources>