<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.signin.SigninFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_logo"
        android:padding="36dp"
        android:src="@drawable/wine_logo_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signinLinearLayoutForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/imgLogo"
        app:layout_constraintStart_toEndOf="@+id/imgLogo"
        app:layout_constraintTop_toBottomOf="@id/imgLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelEmail"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/labelEmail" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/txtEmail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelPassword"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/labelPassword" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/txtPassword" />
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/txtRecoverPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="8dp"
        android:text="@string/txtRecoverPassword"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinLinearLayoutForm" />

    <Button
        android:id="@+id/btnSignin"
        style="@style/RedButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:stateListAnimator="@anim/nav_default_enter_anim"
        android:text="@string/btnSignin"
        android:textAppearance="?android:attr/textAppearanceButton"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtRecoverPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSignin">

        <TextView
            android:id="@+id/labelDontHaveAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelDontHaveAcc"
            android:layout_marginRight="8dp"
            android:textColor="@color/DarkRedWine"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnGoToSignup"
            style="@style/RedButton"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/btnGoToSignup"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

