<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rounded_corners_white"
    android:layout_margin="8dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/linearLayoutPrice"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_red_tag"
        android:elevation="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="4dp"
            android:paddingLeft="8dp"
            android:text="@string/txtPrice"
            android:textColor="@color/WhiteSmoke"
            android:textSize="16sp"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/frameLayoutWinnery"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corners_gray"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgWinnery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/winnery_background" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayoutBottle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:elevation="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBottle"
            android:layout_width="70dp"
            android:layout_height="140dp"
            app:srcCompat="@drawable/wine_bottle_t" />

        <LinearLayout
            android:id="@+id/linearLaytoutTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="78dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtWineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/txtWineName"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtWineProcuder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtWineProcuder"
                android:textSize="16sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutBottle">

        <TextView
            android:id="@+id/txtWineCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtWineCountry"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>