<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchFragment">

    <!-- Parent LinearLayout to hold the filter icon and the search input -->
    <ImageView
        android:id="@+id/imgBackground_Search"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wine_background_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners_white_b"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBackground_Search">

        <!-- Filter Icon positioned outside of linearLayoutSearch -->
        <ImageView
            android:id="@+id/imgFilter"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:layout_weight="0.15"
            android:src="@drawable/ic_filter_list" />

        <EditText
            android:id="@+id/txtWineSearch"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="0.7"
            android:background="@android:color/transparent"
            android:hint="@string/txtWineSearchHint"
            android:inputType="text"
            android:text="@string/txtWineSearch"
            android:textAlignment="textEnd"
            android:textColor="@color/Dark"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imgSearch"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="0.15"
            android:src="@drawable/search_24" />

    </LinearLayout>

    <!-- "No results found" message TextView -->

    <!-- RecyclerView for displaying search results with padding for bottom navigation bar -->

    <TextView
        android:id="@+id/txtNoResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/txtNoResults"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutSearch" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearchedWines"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>
